Reference XChange snapshot repo

--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
 <!-- 				<enabled>false</enabled> -->
 <!-- 			</snapshots> -->
 <!-- 		</repository> -->
-<!-- 		<repository> -->
-<!-- 			<id>sonatype-oss-snapshot</id> -->
-<!-- 			<snapshots /> -->
-<!-- 			<url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
-<!-- 		</repository> -->
+		<repository>
+			<id>sonatype-oss-snapshot</id>
+			<snapshots />
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
 	</repositories>
 
 	<dependencyManagement>
