--- a/example-config.yml
+++ b/example-config.yml
@@ -1,12 +1,25 @@
-loopSeconds: 3
-#telegram:
-#  botToken: XXX
-#  chatId: XXX
-#exchanges:
-#  gdax-sandbox:
-#    apiKey: XXX
-#    secretKey: XXX
-#    passphrase: XXX
+server:
+  type: simple
+  applicationContextPath: /
+  connector:
+    type: http
+    port: 8080
+loopSeconds: ${LOOP_SECONDS}
+telegram:
+  botToken: ${TELEGRAM_BOT_TOKEN}
+  chatId: ${TELEGRAM_CHAT_ID}
+exchanges:
+  gdax-sandbox:
+    apiKey: ${GDAX_SANDBOX_API_KEY}
+    secretKey: ${GDAX_SANDBOX_SECRET_KEY}
+    passphrase: ${GDAX_SANDBOX_PASSPHRASE}
+  gdax:
+    apiKey: ${GDAX_API_KEY}
+    secretKey: ${GDAX_SECRET_KEY}
+    passphrase: ${GDAX_PASSPHRASE}
+  binance:
+    apiKey: ${BINANCE_API_KEY}
+    secretKey: ${BINANCE_SECRET_KEY}
 jerseyClient:
   timeout: 5000ms
   connectionTimeout: 5000ms
