--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<mockito.version>1.10.19</mockito.version>
 	</properties>
 
-	<repositories>
+<!-- 	<repositories> -->
 <!-- 		<repository> -->
 <!-- 			<id>central</id> -->
 <!-- 			<name>Maven Repository Switchboard</name> -->
@@ -46,12 +46,12 @@
 <!-- 				<enabled>false</enabled> -->
 <!-- 			</snapshots> -->
 <!-- 		</repository> -->
-		<repository>
-			<id>sonatype-oss-snapshot</id>
-			<snapshots />
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</repository>
-	</repositories>
+<!-- 		<repository> -->
+<!-- 			<id>sonatype-oss-snapshot</id> -->
+<!-- 			<snapshots /> -->
+<!-- 			<url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
+<!-- 		</repository> -->
+<!-- 	</repositories> -->
 
 	<dependencyManagement>
 		<dependencies>
