--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,14 @@
 		<mainClass>com.grahamcrockford.oco.OcoApplication</mainClass>
 
 		<dropwizard.version>1.2.3</dropwizard.version>
-		<dropwizard.activemq.version>0.5.1</dropwizard.activemq.version>
 		<activemq.version>5.14.1</activemq.version>
-		<xchange.version>4.3.3</xchange.version>
+		<xchange.version>4.3.4-SNAPSHOT</xchange.version>
 		<streamex.version>0.6.6</streamex.version>
 		<guice.version>4.1.0</guice.version>
 		<autovalue.version>1.5</autovalue.version>
+		<rabbitmq.version>5.1.2</rabbitmq.version>
+		<mongo.version>3.6.2</mongo.version>
+<!-- 		<mongojack.version>2.8.0</mongojack.version> -->
 
 		<maven.shade.plugin.version>2.4.1</maven.shade.plugin.version>
 		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
@@ -36,22 +38,22 @@
 		<mockito.version>1.10.19</mockito.version>
 	</properties>
 
-<!-- 	<repositories> -->
-<!-- 		<repository> -->
-<!-- 			<id>central</id> -->
-<!-- 			<name>Maven Repository Switchboard</name> -->
-<!-- 			<layout>default</layout> -->
-<!-- 			<url>http://repo1.maven.org/maven2</url> -->
-<!-- 			<snapshots> -->
-<!-- 				<enabled>false</enabled> -->
-<!-- 			</snapshots> -->
-<!-- 		</repository> -->
-<!-- 		<repository> -->
-<!-- 			<id>sonatype-oss-snapshot</id> -->
-<!-- 			<snapshots /> -->
-<!-- 			<url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
-<!-- 		</repository> -->
-<!-- 	</repositories> -->
+	<!-- <repositories> -->
+	<!-- <repository> -->
+	<!-- <id>central</id> -->
+	<!-- <name>Maven Repository Switchboard</name> -->
+	<!-- <layout>default</layout> -->
+	<!-- <url>http://repo1.maven.org/maven2</url> -->
+	<!-- <snapshots> -->
+	<!-- <enabled>false</enabled> -->
+	<!-- </snapshots> -->
+	<!-- </repository> -->
+	<!-- <repository> -->
+	<!-- <id>sonatype-oss-snapshot</id> -->
+	<!-- <snapshots /> -->
+	<!-- <url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
+	<!-- </repository> -->
+	<!-- </repositories> -->
 
 	<dependencyManagement>
 		<dependencies>
@@ -120,20 +122,20 @@
 				<version>${streamex.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.kjetland.dropwizard</groupId>
-				<artifactId>dropwizard-activemq</artifactId>
-				<version>${dropwizard.activemq.version}</version>
+				<groupId>com.rabbitmq</groupId>
+				<artifactId>amqp-client</artifactId>
+				<version>${rabbitmq.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.activemq</groupId>
-				<artifactId>activemq-broker</artifactId>
-				<version>${activemq.version}</version>
+				<groupId>org.mongodb</groupId>
+				<artifactId>mongo-java-driver</artifactId>
+				<version>${mongo.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.apache.activemq</groupId>
-				<artifactId>activemq-kahadb-store</artifactId>
-				<version>${activemq.version}</version>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.mongojack</groupId> -->
+<!-- 				<artifactId>mongojack</artifactId> -->
+<!-- 				<version>${mongojack.version}</version> -->
+<!-- 			</dependency> -->
 		</dependencies>
 	</dependencyManagement>
 
@@ -195,17 +197,22 @@
 			<artifactId>streamex</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.kjetland.dropwizard</groupId>
-			<artifactId>dropwizard-activemq</artifactId>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-broker</artifactId>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-kahadb-store</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.mongojack</groupId> -->
+<!-- 			<artifactId>mongojack</artifactId> -->
+<!-- 		</dependency> -->
+<dependency>
+    <groupId>org.jongo</groupId>
+    <artifactId>jongo</artifactId>
+    <version>1.3.0</version>
+</dependency>
 	</dependencies>
 
 	<build>
