MongoDB backed and clusterable

--- a/example-config.yml
+++ b/example-config.yml
@@ -1,4 +1,5 @@
 loopSeconds: ${LOOP_SECONDS:-5}
+lockSeconds: 10
 userName: ${USER_NAME}
 password: ${PASSWORD}
 mongoClientURI: ${MONGO_CLIENT_URI}
