--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<autovalue.version>1.5</autovalue.version>
 		<rabbitmq.version>5.1.2</rabbitmq.version>
 		<mongo.version>3.6.2</mongo.version>
-<!-- 		<mongojack.version>2.8.0</mongojack.version> -->
+		<mongojack.version>2.8.0</mongojack.version>
 
 		<maven.shade.plugin.version>2.4.1</maven.shade.plugin.version>
 		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
@@ -105,6 +105,11 @@
 				<version>${guice.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.google.inject.extensions</groupId>
+				<artifactId>guice-assistedinject</artifactId>
+				<version>${guice.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>com.google.auto.value</groupId>
 				<artifactId>auto-value</artifactId>
 				<version>${autovalue.version}</version>
@@ -131,11 +136,11 @@
 				<artifactId>mongo-java-driver</artifactId>
 				<version>${mongo.version}</version>
 			</dependency>
-<!-- 			<dependency> -->
-<!-- 				<groupId>org.mongojack</groupId> -->
-<!-- 				<artifactId>mongojack</artifactId> -->
-<!-- 				<version>${mongojack.version}</version> -->
-<!-- 			</dependency> -->
+			<dependency>
+				<groupId>org.mongojack</groupId>
+				<artifactId>mongojack</artifactId>
+				<version>${mongojack.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -204,15 +209,14 @@
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.mongojack</groupId> -->
-<!-- 			<artifactId>mongojack</artifactId> -->
-<!-- 		</dependency> -->
-<dependency>
-    <groupId>org.jongo</groupId>
-    <artifactId>jongo</artifactId>
-    <version>1.3.0</version>
-</dependency>
+		<dependency>
+			<groupId>org.mongojack</groupId>
+			<artifactId>mongojack</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-assistedinject</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
