--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,10 +5,13 @@
 # You can specify a custom docker image from Docker Hub as your build environment.
 image: maven:3.3.9
 
+clone:
+  depth: full
 pipelines:
   default:
     - step:
         caches:
           - maven
-        script: # Modify the commands below to build your repository.
+        script:
           - mvn -B package # verify code coverage is shit atm # -B batch mode makes Maven less verbose
+          - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD
