--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<rabbitmq.version>5.1.2</rabbitmq.version>
 		<mongo.version>3.6.2</mongo.version>
 		<mongojack.version>2.8.0</mongojack.version>
+		<reflections.version>0.9.11</reflections.version>
 
 		<maven.shade.plugin.version>2.4.1</maven.shade.plugin.version>
 		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
@@ -136,6 +137,11 @@
 				<artifactId>mongojack</artifactId>
 				<version>${mongojack.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.reflections</groupId>
+				<artifactId>reflections</artifactId>
+				<version>${reflections.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -207,6 +213,10 @@
 		<dependency>
 			<groupId>com.google.inject.extensions</groupId>
 			<artifactId>guice-assistedinject</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
 		</dependency>
 	</dependencies>
 
