Add Google Authenticator. Fix classpath scanning for exchange types.

--- a/example-config.yml
+++ b/example-config.yml
@@ -2,6 +2,8 @@ loopSeconds: ${LOOP_SECONDS:-3}
 lockSeconds: ${LOCK_SECONDS:-10}
 userName: ${USER_NAME}
 password: ${PASSWORD}
+secretKey: ${AUTH_TOKEN}
+proxied: ${PROXIED}
 mongoClientURI: ${MONGODB_URI}
 mongoDatabase: ${MONGO_DATABASE}
 telegram:
