--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<mongo.version>3.6.2</mongo.version>
 		<mongojack.version>2.8.0</mongojack.version>
 		<reflections.version>0.9.11</reflections.version>
+		<googleauth.version>1.1.2</googleauth.version>
 
 		<maven.shade.plugin.version>2.4.1</maven.shade.plugin.version>
 		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
@@ -138,9 +139,19 @@
 				<version>${mongojack.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.google.inject.extensions</groupId>
+				<artifactId>guice-servlet</artifactId>
+				<version>${guice.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.reflections</groupId>
 				<artifactId>reflections</artifactId>
 				<version>${reflections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.warrenstrange</groupId>
+				<artifactId>googleauth</artifactId>
+				<version>${googleauth.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -183,6 +194,10 @@
 			<artifactId>guice-multibindings</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-servlet</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.google.auto.value</groupId>
 			<artifactId>auto-value</artifactId>
 		</dependency>
@@ -217,6 +232,10 @@
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.warrenstrange</groupId>
+			<artifactId>googleauth</artifactId>
 		</dependency>
 	</dependencies>
 
