--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,4 +14,4 @@ pipelines:
           - maven
         script:
           - mvn -B package # verify code coverage is shit atm # -B batch mode makes Maven less verbose
-          - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD
+          - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_TEST.git HEAD
