--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,13 +1,7 @@
 {
   "short_name": "oco",
   "name": "Background Trade Control",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
+  "icons": [ ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
