Partially through move to Context from Redux. Much nicer.

--- a/ui/package.json
+++ b/ui/package.json
@@ -3,17 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "create-react-context": "^0.2.1",
     "fetch": "^1.1.0",
     "immutable": "^3.8.2",
     "js-base64": "^2.4.3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.7",
     "react-tradingview-widget": "^1.2.2",
-    "redux": "^3.7.2",
-    "redux-cache": "^0.3.0",
-    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
     "whatwg-fetch": "^2.0.3"
