--- a/pom.xml
+++ b/pom.xml
@@ -19,23 +19,23 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<mainClass>com.grahamcrockford.oco.OcoApplication</mainClass>
 
-		<dropwizard.version>1.2.3</dropwizard.version>
+		<dropwizard.version>1.2.4</dropwizard.version>
 		<activemq.version>5.14.1</activemq.version>
-		<xchange.version>4.3.3</xchange.version>
+		<xchange.version>4.3.4</xchange.version>
 		<streamex.version>0.6.6</streamex.version>
-		<guice.version>4.1.0</guice.version>
-		<autovalue.version>1.5</autovalue.version>
+		<guice.version>4.2.0</guice.version>
+		<autovalue.version>1.5.4</autovalue.version>
 		<rabbitmq.version>5.1.2</rabbitmq.version>
-		<mongo.version>3.6.2</mongo.version>
-		<mongojack.version>2.8.0</mongojack.version>
+		<mongo.version>3.6.3</mongo.version>
+		<mongojack.version>2.8.1</mongojack.version>
 		<reflections.version>0.9.11</reflections.version>
-		<googleauth.version>1.1.2</googleauth.version>
+		<googleauth.version>1.1.5</googleauth.version>
 
-		<maven.shade.plugin.version>2.4.1</maven.shade.plugin.version>
-		<maven.jar.plugin.version>2.6</maven.jar.plugin.version>
-		<maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
-		<maven.source.plugin.version>2.4</maven.source.plugin.version>
-		<maven.javadoc.plugin.version>2.10.3</maven.javadoc.plugin.version>
+		<maven.shade.plugin.version>3.1.0</maven.shade.plugin.version>
+		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
+		<maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
+		<maven.source.plugin.version>3.0.1</maven.source.plugin.version>
+		<maven.javadoc.plugin.version>3.0.0</maven.javadoc.plugin.version>
 		<jacoco.version>0.8.0</jacoco.version>
 		<mockito.version>1.10.19</mockito.version>
 	</properties>
@@ -168,6 +168,10 @@
 		<dependency>
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-auth</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-assets</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.knowm.xchange</groupId>
