--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,26 @@
 				<version>${xchange.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.knowm.xchange</groupId>
+				<artifactId>xchange-cryptopia</artifactId>
+				<version>${xchange.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.knowm.xchange</groupId>
+				<artifactId>xchange-bitfinex</artifactId>
+				<version>${xchange.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.knowm.xchange</groupId>
+				<artifactId>xchange-bittrex</artifactId>
+				<version>${xchange.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.knowm.xchange</groupId>
+				<artifactId>xchange-bitmex</artifactId>
+				<version>${xchange.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>com.google.inject</groupId>
 				<artifactId>guice</artifactId>
 				<version>${guice.version}</version>
@@ -184,6 +204,22 @@
 		<dependency>
 			<groupId>org.knowm.xchange</groupId>
 			<artifactId>xchange-kucoin</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.knowm.xchange</groupId>
+			<artifactId>xchange-cryptopia</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.knowm.xchange</groupId>
+			<artifactId>xchange-bitfinex</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.knowm.xchange</groupId>
+			<artifactId>xchange-bitmex</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.knowm.xchange</groupId>
+			<artifactId>xchange-bittrex</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.google.inject</groupId>
