--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<mongojack.version>2.8.1</mongojack.version>
 		<reflections.version>0.9.11</reflections.version>
 		<googleauth.version>1.1.5</googleauth.version>
+		<dockerfile-maven-version>1.4.0</dockerfile-maven-version>
 
 		<maven.shade.plugin.version>3.1.0</maven.shade.plugin.version>
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
@@ -277,6 +278,27 @@
 
 	<build>
 		<plugins>
+<!-- 			<plugin> -->
+<!-- 				<groupId>com.spotify</groupId> -->
+<!-- 				<artifactId>dockerfile-maven-plugin</artifactId> -->
+<!-- 				<version>${dockerfile-maven-version}</version> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>default</id> -->
+<!-- 						<goals> -->
+<!-- 							<goal>build</goal> -->
+<!-- 							<goal>push</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 				<configuration> -->
+<!-- 					<repository>spotify/foobar</repository> -->
+<!-- 					<tag>${project.version}</tag> -->
+<!-- 					<buildArgs> -->
+<!-- 						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE> -->
+<!-- 					</buildArgs> -->
+<!-- 				</configuration> -->
+<!-- 			</plugin> -->
 			<plugin>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>${maven.shade.plugin.version}</version>
