--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,8 +5,8 @@
 # You can specify a custom docker image from Docker Hub as your build environment.
 image: maven:3.3.9
 
-clone:
-  depth: full
+# clone:
+#   depth: full
 pipelines:
   default:
     - step:
@@ -14,4 +14,4 @@ pipelines:
           - maven
         script:
           - mvn -B package # verify code coverage is shit atm # -B batch mode makes Maven less verbose
-          - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_TEST.git HEAD
+#          - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_TEST.git HEAD
