--- a/oco-web/pom.xml
+++ b/oco-web/pom.xml
@@ -18,6 +18,10 @@
     </parent>
 
 	<name>OCO Web API</name>
+	
+	<properties>
+		<mainClass>com.grahamcrockford.oco.web.WebApplication</mainClass>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -90,4 +94,64 @@
 			<artifactId>googleauth</artifactId>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+	<!-- 			<plugin> -->
+<!-- 				<groupId>com.spotify</groupId> -->
+<!-- 				<artifactId>dockerfile-maven-plugin</artifactId> -->
+<!-- 				<version>${dockerfile-maven-version}</version> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>default</id> -->
+<!-- 						<goals> -->
+<!-- 							<goal>build</goal> -->
+<!-- 							<goal>push</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 				<configuration> -->
+<!-- 					<repository>spotify/foobar</repository> -->
+<!-- 					<tag>${project.version}</tag> -->
+<!-- 					<buildArgs> -->
+<!-- 						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE> -->
+<!-- 					</buildArgs> -->
+<!-- 				</configuration> -->
+<!-- 			</plugin> -->
+			<plugin>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>${maven.shade.plugin.version}</version>
+				<configuration>
+					<createDependencyReducedPom>true</createDependencyReducedPom>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>${mainClass}</mainClass>
+						</transformer>
+					</transformers>
+					<!-- exclude signed Manifests -->
+					<filters>
+						<filter>
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+							</excludes>
+						</filter>
+					</filters>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
