--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,15 +3,19 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
-image: maven:3.3.9
+image: llcoolg/maven-npm
 
 # clone:
 #   depth: full
 pipelines:
   default:
-    - step:
-        caches:
-          - maven
-        script:
-          - mvn -B package # verify code coverage is shit atm # -B batch mode makes Maven less verbose
+    - parallel:
+      - step:
+          script:
+            - npm build oco-ui
+      - step:
+          caches:
+            - maven
+          script:
+            - mvn -B package # verify code coverage is shit atm # -B batch mode makes Maven less verbose
 #          - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME_TEST.git HEAD
