Slightly naive support for streaming tickers, so we get faster response and don't hammer exchange APIs. However, Binance isn't currently supported due to a bug needing fixing in the library I'm using. Also it's "naive" due to the threading logic which would allow for re-entrancy in the event of lots of events firing at once. Need to decide whether we want tickers to "queue up" in the event of slow handling, or get skipped.

--- a/oco-api/pom.xml
+++ b/oco-api/pom.xml
@@ -17,12 +17,16 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-	<name>OCO API</name>
+	<name>OCO Internal Shared API</name>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.knowm.xchange</groupId>
 			<artifactId>xchange-core</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>info.bitrich.xchange-stream</groupId>
+		    <artifactId>xchange-stream-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.knowm.xchange</groupId>
