--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,10 @@
 
 		<dropwizard.version>1.2.4</dropwizard.version>
 		<activemq.version>5.14.1</activemq.version>
+		
 		<xchange.version>4.3.4</xchange.version>
+		<xchange.stream.version>4.3.2</xchange.stream.version>
+		
 		<streamex.version>0.6.6</streamex.version>
 		<guice.version>4.2.0</guice.version>
 		<autovalue.version>1.5.4</autovalue.version>
@@ -82,6 +85,21 @@
 				<groupId>org.knowm.xchange</groupId>
 				<artifactId>xchange-core</artifactId>
 				<version>${xchange.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>info.bitrich.xchange-stream</groupId>
+			    <artifactId>xchange-stream-core</artifactId>
+			    <version>${xchange.stream.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>info.bitrich.xchange-stream</groupId>
+			    <artifactId>xchange-binance</artifactId>
+			    <version>${xchange.stream.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>info.bitrich.xchange-stream</groupId>
+			    <artifactId>xchange-bitfinex</artifactId>
+			    <version>${xchange.stream.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.knowm.xchange</groupId>
