Add a couple of extra exchanges for the hell of it.

--- a/oco-web/pom.xml
+++ b/oco-web/pom.xml
@@ -70,6 +70,10 @@
 			<artifactId>xchange-bittrex</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.knowm.xchange</groupId>
+			<artifactId>xchange-okcoin</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
 		</dependency>
